--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "proxyConfig": "proxy.conf.json",
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1d367537-f6f1-43cf-b270-66facbfe8f57"
   }
 }
